test/Fail/Issue1609a.agda
-- Andreas, 2015-07-13  Better parse errors for illegal type signatures

A : Set where B = C
