test/Fail/Issue1609a.err
Issue1609a.agda:3.19: error: [ParseError]
A type signature cannot have a where clause
